--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "timetravel-react",
   "version": "0.1.0",
   "private": true,
-  "homepage":"https://1love1heart.github.io/teamwork1/src/index.js", 
+  "homepage":"https://1love1heart.github.io/teamwork1/", 
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
